# automated_production_report

./: .gitignore  MANIFEST.in  environment.yml  readme.MD  requirements.txt  setup.cfg  setup.py
configs/: logging.toml
scripts/: daily_ops_report.bat  tank_vol.bat  update_hub_report.bat
src/rerports/: __init__.py  config.py
src/rerports/controllers/: run_report.py
src/rerports/email/: email_recips.py  email_utils.py
src/rerports/models/: location_consumption_model.py  location_production_model.py  summary_production_model.py
src/rerports/spotfire/: tank_measurement.py
src/rerports/templates/: daily_plots.py
src/rerports/utilities/: log_helper.py
tests/: conftest.py  fake_email.py  logging_test.py  test_generators.py  test_reports.py
