[metadata]
name = prod_reports
# Version needs regex in setup.py.
project_urls =
    Documentation = http://git.company.com/company_name/automated_production_report/docs
    Code = http://git.company.com/company_name/automated_production_report/
    Issue tracker = http://git.company.com/company_name/automated_production_report/issues
license = Proprietary
author = User 1
author_email = user1@company.com
maintainer = 
    User 1
maintainer_email = 
    user1@company.com
description = A set of programs used to produce key production indicators
long_description = file: README.md
long_description_content_type = text/x-md
classifiers =
    Development Status :: 2 - Beta
    Environment :: CLI
    Framework :: Production Reports
    Intended Audience :: Company Name
    License :: Proprietary
    Operating System :: Windows
    Programming Language :: Python


[options]
packages = find:
package_dir= =src
include_package_data = True
python_requires >=3.7
install_requires =
    comtypes>=1.1.7
    entrypoints>=0.3
    filterpy>=1.4.5
    numpy>=1.19.1
    pandas>=1.1.0
    python-dotenv>=0.13.0
    toml>=0.10.1
    scipy>=1.5.0
    typer>=0.3.1
    seaborn>=0.10.1
    parse>=1.17.0
    sqlalchemy>=1.3.19
    pyodbc>=4.0.30
    cx_oracle>=7.2.3


[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    reports=prodreport.bin.report_app:main

[tool:pytest]
testpaths = tests
filterwarnings = 
    ignore::RuntimeWarning
addopts = -p no:faulthandler
norecursedirs = build dist node_modules *.egg-info .state requirements
markers =
    unit: Quick running unit tests which test small units of functionality.
    functional: Slower running tests which test the entire system is functioning.
    slow: Tests that take longer than 10 seconds to complete (deselect with '-m "not slow"')
    extremely_slow: Tests that take longer than 1 minute to complete (deselect with '-m "not extremely_slow"')

[tool:isort]
profile=black
lines_between_types=1
combine_as_imports=True
known_first_party=warehouse,tests

[coverage:run]
branch = True
source =
    src

[coverage:paths]
source =
    src
    */site-packages